# type_righter

./: .gitignore  CMakeLists.txt  build.sh
include/: dtk.h  file_utils.h  stream_utils.h
src/: CMakeLists.txt  dtk.c  file_utils.c  main.c  stream_utils.c  tpr_read.c  tpr_write.c
